--- a/docs/templates/post.html
+++ b/docs/templates/post.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h1>{{ page.title }}</h1>
-  <p class="post-meta" style="font-size: 0.8em;">
+  <p class="post-meta">
     {% if page.meta.place %}{{page.meta.place}}{% endif %}.
     {{ page.meta.date.strftime("%b %d, %Y") }}
     <br/>
